2022-06-09
	- FIX: method DateTimeHelper.ToDate(iataDate) got the year wrong

2022-03-14
	- New method StringUtils.Unwrap()
	
	
2022-03-11
	- Methods NormalizePath() and DenormalizePath() now check for OS-specific path separators.